desktop-themes/GreenLaguna/gtk-3.0/gtk-widgets.css
/* ... */
.button:insensitive {
	background-color: transparent;
	background-image: linear-gradient(to bottom,
	                                  alpha(@button_gradient_color_a, 0.5),
	                                  alpha(@button_gradient_color_b, 0.6));
	border-image: none;
	border-style: solid;
	border-color: shade(@button_border, 1.2);
	color: @insensitive_fg_color;
}

/* insensitive active toggle buttons */
.button:active:insensitive {
	background-image: linear-gradient(to bottom,
	                                  alpha(@button_gradient_color_b, 0.5),
	                                  alpha(@button_gradient_color_a, 0.4));
	border-image: none;
	border-style: solid;
	border-color: shade(@button_border, 1.2);
	color: @insensitive_fg_color
}

.button.default {
	background-image: linear-gradient(to bottom,
	                                  #ffffff,
	                                  shade(@theme_bg_color, 0.9) 50%,
	                                  shade(@button_gradient_color_b, 0.78));
}

.button.default:hover {
	border-image: none;
}

/****************
 * Link Buttons *
 ****************/

/* We don't make them different. */

/*****************
 * GtkSpinButton *
 *****************/
.spinbutton .button,
.spinbutton .button:insensitive,
.spinbutton .button:hover,
.spinbutton .button:active,
.spinbutton .button:focus {
	background-image: none;
	background-color: transparent;
	/*border-width: 1px;*/
	border-style: none;
	border-image: none;
	/*padding: 0px;*/
}

.spinbutton .button,
.spinbutton .button:focus {
	color: shade(@insensitive_fg_color, 0.75);
}

.spinbutton .button:hover,
.spinbutton .button:active {
	color: @theme_text_color;
}

.spinbutton .button:insensitive {
	color: shade(@insensitive_fg_color, 1.2);
}

/**************
 * Scrollbars *
 **************/
.scrollbar {
	background-image: none;
	border-style: solid;
	-GtkRange-trough-border: 0;
	-GtkRange-arrow-scaling: 0.5;
	-GtkRange-slider-width: 12;
	-GtkRange-stepper-size: 16;
	-GtkScrollbar-min-slider-length: 34; /* minimum size for the slider. sadly can't be in '.slider' where it belongs */

	-GtkRange-stepper-spacing: 0;
	-GtkRange-trough-under-steppers: 0;
}

.scrollbar.trough {
	background-color: transparent;
	background-image: none;
	border-style: none;
	border-width: 0px;
}

.scrollbar.slider {
	background-color: transparent;
	background-image: linear-gradient(to top,
	                                  shade(@toolbar_gradient_base, 0.82),
	                                  white);
	border-color: transparent;
	border-radius: 5px;
	border-width: 3px 2px 3px;
	border-image: none;
}

.scrollbar.slider.vertical {
	border-width: 1px;
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@toolbar_gradient_base, 0.82),
	                                  white);
}

.scrollbar.slider.horizontal {
	border-width: 1px;
	border-radius: 6px;
	background-image: linear-gradient(to left,
	                                  shade(@toolbar_gradient_base, 0.82),
	                                  white);
}

.scrollbar.slider:prelight {
	background-image: linear-gradient(to top,
	                                  shade(@toolbar_gradient_base, 0.88),
	                                  shade(@theme_bg_color, 1.6));
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
}

.scrollbar.slider.vertical:prelight {
	background-image: linear-gradient(to top,
	                                  shade(@toolbar_gradient_base, 0.88),
	                                  shade(@theme_bg_color, 1.6));
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
}

.scrollbar.slider.horizontal:prelight {
	background-image: linear-gradient(to left,
	                                  shade(@toolbar_gradient_base, 0.88),
	                                  shade(@theme_bg_color, 1.6));
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
}

.scrollbar.slider:prelight:active {
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@theme_bg_color, 1.5),
	                                  shade(@theme_bg_color, 0.9));
	border-color: shade(@button_border, 1.1);
}

.scrollbar.slider.vertical:prelight:active {
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@theme_bg_color, 1.5),
	                                  shade(@theme_bg_color, 0.9));
}

.scrollbar.slider.horizontal:prelight:active {
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
	background-image: linear-gradient(to left,
	                                  shade(@theme_bg_color, 1.5),
	                                  shade(@theme_bg_color, 0.9));
}

.scrollbar.button,
.scrollbar.button.horizontal,
.scrollbar.button.vertical {
	color: @theme_fg_color; /*@internal_element_color*/
	border-image: none;
	border-style: none;
	border-width: 0px;
	background-image: none;
	background-color: transparent;
}

.scrollbar.button:hover,
.scrollbar.button.horizontal:hover,
.scrollbar.button.vertical:hover {
	background-image: none;
	background-color: @theme_main_color;
	/*border-color: shade(@highlighted_border, 1.1);*/
	color: shade(@highlighted_border, 0.8);
}

.scrollbar.button:hover:active,
.scrollbar.button.horizontal:hover:active {
	background-image: linear-gradient(to top,
	                                  shade(@theme_bg_color, 1.6),
	                                  shade(@toolbar_gradient_base, 0.88));
	/*border-color: shade(@highlighted_border, 1.1);*/
	border-image: none;
	color: @theme_fg_color;
	border-image: none;
	border-style: none;
	border-width: 0px;
}
/* ... */

